fix modal button alignment

--- a/src/components/ItemModal/ItemModal.css
+++ b/src/components/ItemModal/ItemModal.css
@@ -124,8 +124,8 @@
 }
 
 .modal__content {
-  width: 498px;
-
+  width: 496px;
+  box-sizing: border-box;
   overflow: hidden;
   border-radius: 16px;
 
