--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -104,7 +104,6 @@
   border: none;
   border-radius: 4px;
   color: #ffffff;
-  margin-top: 32px;
   cursor: pointer;
 }
 
